@@ -21,7 +21,7 @@ public class SourceRendererManager {
 
                 //Must use Class.forName() because we can't see this class in this module
                 try {
-                    registerRenderer((SourceRenderer) Class.forName("com.atlassian.clover.reporters.html.source.groovy.GroovySourceRenderer").newInstance());
+                    registerRenderer((SourceRenderer) Class.forName("com.atlassian.clover.reporters.html.source.groovy.GroovySourceRenderer").getDeclaredConstructor().newInstance());
                 } catch (Exception e) {
                     Logger.getInstance().warn("Failed to register the Groovy source renderer - syntax highlighting will not be performed for Groovy code", e);
                 }
